2025-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_delimited_identifier): Update
	diagnostic wording to reflect function's generality, making its
	issue in the case of, say, `\C\h'1m'foobar\h'1m'` more truthful.

2025-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename
	`read_delimited_name()` to `read_delimited_identifier()`.  This
	function isn't actually used for "names" (identifiers of macros,
	strings, and diversions), but, at present, only for special
	character or class identifiers.  But its operation is
	sufficiently general to handle any GNU troff identifier.
	(read_delimited_name): Rename declaration and definition from
	this...
	(read_delimited_identifier): ...to this.
	(token::next): Update call site.

2025-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/ja.tmac:
	* tmac/zh.tmac: Correct apparently mistaken character flags for
	`[CJKpostpunct]` class from "266" to "256".  A typo introduced
	two spurious flags (2 and 8).

	Fixes <https://savannah.gnu.org/bugs/?67757>.  Problem appears
	to date back to commit 1cb8dd7bde, 13 December 2010.  Thanks to
	Colin Watson for suggesting a regression test procedure.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (charinfo::dump): Use preprocessor to
	disable reporting of nested class information.  The feature
	doesn't work.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (charinfo::dump): Use more
	user-intelligible language when dumping character classes; refer
	to "code points" instead of "ranges", since the notation is
	conventional (e.g., "U+002C U+003A" or "U+4E00-U+9FFF").

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/reg.cpp (dump_register): Fix assertion failure.
	Some string-valued registers, like `.z` and the new `.itm`, can
	be empty.
