@@ -1,3 +1,10 @@
+2025-12-08  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/troff/input.cpp (read_rgb, read_cmy, read_cmyk)
+	(read_gray): Fix code style nit.  Call `do_get_long_name()`,
+	which takes a `bool` as its first parameter, using Boolean, not
+	integer, literals.
+
 2025-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (read_delimited_identifier): Update
